samples/_failures_safe/1761629226_15f109_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_debd5d74.c: In function ‘main’:
./samples/SAFE/__tmp_debd5d74.c:148:16: error: missing terminating " character
  148 |         printf("Shortest
      |                ^~~~~~~~~
./samples/SAFE/__tmp_debd5d74.c:148:9: error: expected expression at end of input
  148 |         printf("Shortest
      |         ^~~~~~
./samples/SAFE/__tmp_debd5d74.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_debd5d74.c:148:9: error: expected declaration or statement at end of input
